--- a/spv/templates/_parts/menu.html
+++ b/spv/templates/_parts/menu.html
@@ -5,12 +5,12 @@
 			<li><a href="{% url 'home' %}"><img src="{% static 'img/SoloBajio_icon.png' %}"><strong class="fn-white hide-for-small-only">SoloBajio</strong></a></li>
 			<li><a href="{% url 'lugares' %}">Lugares</a></li>
 			<li><a href="{% url 'eventos' %}">Eventos</a></li>
+			<!--<li><a href="">Hot</a></li>-->
 		</ul>
 	</div>
 	<div class="top-bar-right hide-for-small-only">
 		<ul class="menu">
-			<li><a href="">Conocenos</a></li>
-			<li><a href="">Contacto</a></li>
+			<li><a href="{% url 'contacto' %}">Contacto</a></li>
 		</ul>
 	</div>
 </div>
