--- a/spv/templates/home/content.html
+++ b/spv/templates/home/content.html
@@ -3,7 +3,7 @@
 	<div class="callout large simple-blur">
 		<div class="row column text-center">
 			<h1>SoloBajio</h1>
-			<p class="lead">Directorio comercial de Moroleon, Uriangato y Yuriria</p>
+			<p class="lead">Conectando comercios a la web</p>
 			<a href="{% url 'lugares' %}" class="button large btn-primary">Comercios en la zona</a>
 			<a href="{% url 'eventos' %}" class="button large btn-secondary-hollow">Eventos</a>
 		</div>
@@ -32,6 +32,27 @@
 	</div>
 	<div class="columns">
 		<p><a href=""><img src="http://placehold.it/640x480"></a></p>
+	</div>
+</div>
+
+<hr>
+<div class="row column">
+	<h4 style="margin: 0;" class="text-center">Estados</h4>
+</div>
+<hr>
+
+<div class="row small-up-2 medium-up-4">
+	<div class="column">
+		<p><a href=""><img src="http://placehold.it/400x400&text=Queretaro" alt="image for article"></a></p>
+	</div>
+	<div class="column">
+		<p><a href=""><img src="http://placehold.it/400x400&text=Guanajuato" alt="image for article"></a></p>
+	</div>
+	<div class="column">
+		<p><a href=""><img src="http://placehold.it/400x400&text=Aguascalientes" alt="image for article"></a></p>
+	</div>
+	<div class="column">
+		<p><a href=""><img src="http://placehold.it/400x400&text=Jalisco" alt="image for article"></a></p>
 	</div>
 </div>
 
