--- a/spv/templates/contacto/content.html
+++ b/spv/templates/contacto/content.html
@@ -7,23 +7,23 @@
 	</div>
 	<div class="medium-4 columns">
 		<div class="text-center">
-			<img src="{% static 'img/Diego.jpg' %}" class="shadow-4dp img-rounded">
-			<h3>Diego</h3>
-			<p class="fn-18 fn-gray">Adorando programar <3</p>
+			<img src="{% static 'img/Poncho.jpg' %}" class="shadow-4dp img-rounded">
+			<h3>Poncho</h3>
+			<p class="fn-18 fn-gray">Gerente de ventas</p>
 		</div>
 	</div>
 	<div class="medium-4 columns">
 		<div class="text-center">
-			<img src="{% static 'img/Mau.jpg' %}" class="shadow-4dp img-rounded">
-			<h3>Mau</h3>
-			<p class="fn-18 fn-gray">Responsabilidad y orden</p>
+			<img src="{% static 'img/Diego.jpg' %}" class="shadow-4dp img-rounded">
+			<h3>Diego</h3>
+			<p class="fn-18 fn-gray">Programador web</p>
 		</div>
 	</div>
-	<div class="medium-4 columns">
+    <div class="medium-4 columns">
 		<div class="text-center">
 			<img src="{% static 'img/Luis.jpg' %}" class="shadow-4dp img-rounded">
 			<h3>Luigi</h3>
-			<p class="fn-18 fn-gray">Innovando en diseño</p>
+			<p class="fn-18 fn-gray">Diseño y administración</p>
 		</div>
 	</div>
 </div>
