--- a/spv/templates/info/content.html
+++ b/spv/templates/info/content.html
@@ -71,6 +71,8 @@
 				<div id="horarios">
 					{% for horario in negocio.horarios.all %}
 						<div><span class="fn-black">{{days|array_index_one:horario.weekday}}</span>: {{horario.from_hour}} - {{horario.to_hour}}</div>
+                    {% empty %}
+                        <p class="text-center">No hay horarios disponibles</p>
 					{% endfor %}
 				</div>
 			</div>
@@ -84,17 +86,10 @@
 	</div>
 
 	<div class="row small-up-2 large-up-4">
-		<div class="column">
-			<p><a href=""><img src="http://placehold.it/640x480"></a></p>
-		</div>
-		<div class="column">
-			<p><a href=""><img src="http://placehold.it/640x480"></a></p>
-		</div>
-		<div class="column">
-			<p><a href=""><img src="http://placehold.it/640x480"></a></p>
-		</div>
-		<div class="column">
-			<p><a href=""><img src="http://placehold.it/640x480"></a></p>
-		</div>
+        {% for recomendado in recomendados %}
+            <div class="column">
+                <p><a href="{% url 'info' pk=recomendado.pk %}"><img src="{{recomendado.images.all.0.image.url}}" alt="{{recomendado.images.all.0.image.url}}"></a></p>
+    		</div>
+        {% endfor %}
 	</div>
 </div>
